--- a/react-portfolio/src/components/About/About.module.css
+++ b/react-portfolio/src/components/About/About.module.css
@@ -56,6 +56,10 @@
     background-size: 100% 100%;
 }
 
+.aboutItem img {
+    padding-right: 3%;
+}
+
 .aboutItem h3 {
     font-size: 25px;
     font-weight: 600;
